# boilerplate

./: pyproject.toml  requirements.txt
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: password_change.html  signup.html
backend/: Dockerfile  docker-compose.yml  pyproject.toml  tailwind.config.js
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py
backend/templates/: 404.html  500.html  index.html
backend/templates/layouts/: base.html  footer.html  navbar.html
bookmarks/: forms.py  models.py  urls.py  views.py
bookmarks/migrations/: 0001_initial.py
bookmarks/templates/bookmarks/: base.html  detail.html  quick_add_bookmark.html  sidebar.html  switch_layout.html  view_card.html  view_list.html
commons/: urls.py  views.py
commons/migrations/: 0001_initial.py
commons/templates/commons/: dashboard.html
config/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/recipes/: upload.html
screenshots/: admin.py  forms.py  models.py  urls.py  views.py
screenshots/migrations/: 0001_initial.py
screenshots/templates/screenshots/: index.html
templates/includes/: navbar.html
