[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cleanup>=9.0.0",
    "django-debug-toolbar>=4.4.6",
    "django-environ>=0.11.2",
    "django-filter>=24.3",
    "django-import-export>=4.3.3",
    "django-widget-tweaks>=1.5.0",
    "django>=5.1.4",
    "djlint>=1.36.3",
    "ruff>=0.8.3",
]

[tool.ruff]
target-version = "py313"

lint.ignore = [
    "G004",    # `logging-f-string` : loggingでf-stringを使いたいので無視する
    "PD901",   #すでに`df`という変数をいろんなところで使っているため
    "PD002",   #すでにpandasで`inplace=True`はいろんなところで使っているため
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "PLR2004", # magic-value-comparison: listのサイズで判定するときがよくあるため
    "ANN101",  # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102",  # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ERA",     # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する

    # いずれ無視しないようにする
    "ANN201", # missing-return-type-public-function: 
    "ANN202", # missing-return-type-private-function:
    "PLR",    # pylint Refactor

    # 以下のルールはannofabcliのコードに合っていないので無効化した
    "RSE", # flake8-raise
    "D",   # pydocstyle, Docstringを中途半端にしか書いていないので、除外する
    "C90", # mccabe 
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops 
    "COM", # flake8-commas 
    "S",   # flake8-bandit
    "EM",  #flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET", #flake8-return
    "SIM", #flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", #pathlibを使わないコードが多いので、除外する
    "ISC", #flake8-implicit-str-concat
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
]
lint.select = ["ALL"]

line-length = 120
